unpackaged/main/default/objects/cmbls__Repayment__c/cmbls__Repayment__c.object-meta.xml
<CustomObject>
    <label>Repayment</label>
    <nameField>
        <displayFormat>RPMT-{0000000}</displayFormat>
        <label>Repayment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Repayments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>