unpackaged/main/default/objects/cmbls__Repayment__c/fields/Acc_Amort_Broker_Fees_GL__c.field-meta.xml
<CustomField>
    <fullName>Acc_Amort_Broker_Fees_GL__c</fullName>
    <label>Acc.Amort - Broker Fees GL #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>