unpackaged/main/default/objects/cmbls__Repayment__c/fields/Accrued_Interest__c.field-meta.xml
<CustomField>
    <fullName>Accrued_Interest__c</fullName>
    <label>Accrued Interest</label>
    <summarizedField>cmbls__InterestAccrual__c.cmbls__Total_Interest_Accrued_for_Period__c</summarizedField>
    <summaryForeignKey>cmbls__InterestAccrual__c.cmbls__Repayment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>