unpackaged/main/default/objects/cmbls__Repayment__c/fields/Actual_Merchant_Term__c.field-meta.xml
<CustomField>
    <fullName>Actual_Merchant_Term__c</fullName>
    <label>Actual Merchant Term</label>
    <length>10</length>
    <type>Text</type>
</CustomField>