unpackaged/main/default/objects/cmbls__Repayment__c/fields/Amortized_Income_Org_Fees_GL__c.field-meta.xml
<CustomField>
    <fullName>Amortized_Income_Org_Fees_GL__c</fullName>
    <label>Amortized Income Org Fees GL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>