unpackaged/main/default/objects/cmbls__Repayment__c/fields/Booking_GL_Created__c.field-meta.xml
<CustomField>
    <fullName>Booking_GL_Created__c</fullName>
    <label>Booking GL Created</label>
    <summaryFilterItems>
        <field>cmbls__Payment__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Credit</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>cmbls__Payment__c.cmbls__Transaction_Type__c</field>
        <operation>equals</operation>
        <value>Distribution</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>cmbls__Payment__c.cmbls__Status__c</field>
        <operation>equals</operation>
        <value>Settled</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>cmbls__Payment__c.cmbls__Posted_to_accounting__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>cmbls__Payment__c.cmbls__Repayment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>