unpackaged/main/default/objects/cmbls__Repayment__c/fields/Broker_Fees_Payable_GL__c.field-meta.xml
<CustomField>
    <fullName>Broker_Fees_Payable_GL__c</fullName>
    <label>Broker Fees Payable GL #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>