unpackaged/main/default/objects/cmbls__Repayment__c/fields/Capitalized_LendingTree_GL__c.field-meta.xml
<CustomField>
    <fullName>Capitalized_LendingTree_GL__c</fullName>
    <label>Capitalized LendingTree GL #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>