unpackaged/main/default/objects/cmbls__Repayment__c/fields/Capitalized_Strategic_Partners_GL__c.field-meta.xml
<CustomField>
    <fullName>Capitalized_Strategic_Partners_GL__c</fullName>
    <label>Capitalized Strategic Partners GL #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>