unpackaged/main/default/objects/cmbls__Repayment__c/fields/Charge_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>Charge_Off_Date__c</fullName>
    <label>Charge Off Date</label>
    <type>Date</type>
</CustomField>