unpackaged/main/default/objects/cmbls__Repayment__c/fields/Charge_Off_Principal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Charge_Off_Principal_Amount__c</fullName>
    <label>Charge Off Principal Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>