unpackaged/main/default/objects/cmbls__Repayment__c/fields/cmbls__Amount_applied_to_credit_fees_applied__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Amount_applied_to_credit_fees_applied__c</fullName>
    <description>Used to calculate Fee balance as Salesforce formula fields do not allow the use of logical OR.</description>
    <label>Amount Applied to Credit Fees Applied</label>
    <summarizedField>cmbls__Payment__c.cmbls__Amount_Applied_to_Fees__c</summarizedField>
    <summaryFilterItems>
        <field>cmbls__Payment__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Credit</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>cmbls__Payment__c.cmbls__Status__c</field>
        <operation>equals</operation>
        <value>Fees Applied, Settled, Applied</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>cmbls__Payment__c.cmbls__Post_Write_Off_Record__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>cmbls__Payment__c.cmbls__Repayment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>