unpackaged/main/default/objects/cmbls__Repayment__c/fields/cmbls__Bank_Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Bank_Routing_Number__c</fullName>
    <label>Bank Routing Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>