unpackaged/main/default/objects/cmbls__Repayment__c/fields/cmbls__Date_completed__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Date_completed__c</fullName>
    <label>Date completed</label>
    <type>Date</type>
</CustomField>