unpackaged/main/default/objects/cmbls__Repayment__c/fields/cmbls__Draw_Reserve_Balance__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Draw_Reserve_Balance__c</fullName>
    <formula>IF( cmbls__Revolving_Line_of_Credit__c ,
  cmbls__Total_Credits_to_Draw_Reserve__c  -  cmbls__Total_Debits_to_Draw_Reserve__c  -  cmbls__Total_Draws_Credited__c  +  cmbls__Total_Debit_Draws__c +  cmbls__Principal_Paid__c ,
  cmbls__Total_Credits_to_Draw_Reserve__c  -  cmbls__Total_Debits_to_Draw_Reserve__c  -  cmbls__Total_Draws_Credited__c  +  cmbls__Total_Debit_Draws__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Draw Reserve Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>