unpackaged/main/default/objects/cmbls__Repayment__c/fields/cmbls__Fee_Balance__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Fee_Balance__c</fullName>
    <description>Calculated as sum of Amount Applied to Fees from credit records where Status = Settled OR Fees Applied minus sum of Amount Applied to Fees from all debit records where Status = Settled OR Fees Collected</description>
    <formula>cmbls__Amount_applied_to_credit_fees_applied__c - cmbls__Amount_applied_to_debit_fees_applied__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Fees remaining to be collected</inlineHelpText>
    <label>Fee Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>