unpackaged/main/default/objects/cmbls__Repayment__c/fields/cmbls__First_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>cmbls__First_Payment_Date__c</fullName>
    <label>First Payment Date</label>
    <type>Date</type>
</CustomField>