unpackaged/main/default/objects/cmbls__Repayment__c/fields/cmbls__Funded_Date__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Funded_Date__c</fullName>
    <inlineHelpText>This will be used to indicate the funded date for the original deal</inlineHelpText>
    <label>Funded Date</label>
    <type>Date</type>
</CustomField>