unpackaged/main/default/objects/cmbls__Repayment__c/fields/cmbls__Funding_Amount__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Funding_Amount__c</fullName>
    <description>Amount that was put on the Contract</description>
    <inlineHelpText>Amount that was put on the Contract</inlineHelpText>
    <label>Funding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>