unpackaged/main/default/objects/cmbls__Repayment__c/fields/cmbls__Intial_Repayment_Amount__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Intial_Repayment_Amount__c</fullName>
    <description>Amount due from merchant</description>
    <inlineHelpText>Amount due from merchant</inlineHelpText>
    <label>Initial Repayment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>