unpackaged/main/default/objects/cmbls__Repayment__c/fields/cmbls__Loan_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Loan_Start_Date__c</fullName>
    <label>Loan Start Date</label>
    <type>Date</type>
</CustomField>