unpackaged/main/default/objects/cmbls__Repayment__c/fields/cmbls__Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Maturity_Date__c</fullName>
    <inlineHelpText>Maturity Date for Loan</inlineHelpText>
    <label>Current Maturity Date</label>
    <type>Date</type>
</CustomField>