unpackaged/main/default/objects/cmbls__Repayment__c/fields/cmbls__Open_Balance__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Open_Balance__c</fullName>
    <formula>cmbls__Total_Credits_Settled__c -  cmbls__Total_Amount_Settled__c - cmbls__Fee_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>