unpackaged/main/default/objects/cmbls__Repayment__c/fields/cmbls__Origination_Fee_Not_Netted__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Origination_Fee_Not_Netted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, the origination fee will not be deducted from the Funding Amount</description>
    <inlineHelpText>When true, the origination fee will not be deducted from the Funding Amount</inlineHelpText>
    <label>Origination Fee Not Netted</label>
    <type>Checkbox</type>
</CustomField>