unpackaged/main/default/objects/cmbls__Repayment__c/fields/cmbls__Payee_Account__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Payee_Account__c</fullName>
    <description>Name of the merchant</description>
    <inlineHelpText>Name of the merchant</inlineHelpText>
    <label>Payer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Repayments (Payer Account)</relationshipLabel>
    <relationshipName>Payment_Settings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>