unpackaged/main/default/objects/cmbls__Repayment__c/fields/cmbls__Payment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Payment_Frequency__c</fullName>
    <description>The frequency of payments being made</description>
    <inlineHelpText>The frequency of payments being made</inlineHelpText>
    <label>Payment Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>