unpackaged/main/default/objects/cmbls__Repayment__c/fields/cmbls__Pending_Amount__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Pending_Amount__c</fullName>
    <description>Any amount submitted, but not settled</description>
    <inlineHelpText>Payments submitted, but not settled. This field only calculates the Payment transaction type</inlineHelpText>
    <label>Total Pending Amount</label>
    <summarizedField>cmbls__Payment__c.cmbls__Transaction_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>cmbls__Payment__c.cmbls__Status__c</field>
        <operation>equals</operation>
        <value>Scheduled, Pending</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>cmbls__Payment__c.cmbls__Transaction_Type__c</field>
        <operation>equals</operation>
        <value>Payment</value>
    </summaryFilterItems>
    <summaryForeignKey>cmbls__Payment__c.cmbls__Repayment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>