unpackaged/main/default/objects/cmbls__Repayment__c/fields/cmbls__Posted_to_Accounting__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Posted_to_Accounting__c</fullName>
    <label>Posted to Accounting</label>
    <type>Date</type>
</CustomField>