unpackaged/main/default/objects/cmbls__Repayment__c/fields/cmbls__Primary_Fund__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Primary_Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Fund</label>
    <referenceTo>cmbls__Fund__c</referenceTo>
    <relationshipLabel>Repayments</relationshipLabel>
    <relationshipName>Repayments</relationshipName>
    <type>Lookup</type>
</CustomField>