unpackaged/main/default/objects/cmbls__Repayment__c/fields/cmbls__Principal_Paid__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Principal_Paid__c</fullName>
    <label>Principal Paid</label>
    <summarizedField>cmbls__Payment__c.cmbls__Principal_Payment_Amt__c</summarizedField>
    <summaryFilterItems>
        <field>cmbls__Payment__c.cmbls__Status__c</field>
        <operation>equals</operation>
        <value>Settled, Fees Reversed, Applied</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>cmbls__Payment__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Debit</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>cmbls__Payment__c.cmbls__Post_Write_Off_Record__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>cmbls__Payment__c.cmbls__Repayment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>