unpackaged/main/default/objects/cmbls__Repayment__c/fields/cmbls__Renewal_Payoff_Amount__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Renewal_Payoff_Amount__c</fullName>
    <label>Renewal Payoff Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>