unpackaged/main/default/objects/cmbls__Repayment__c/fields/cmbls__Revolving_Line_of_Credit__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Revolving_Line_of_Credit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked represents a revolving line of credit loan</description>
    <inlineHelpText>If checked represents a revolving line of credit loan</inlineHelpText>
    <label>Revolving Line of Credit</label>
    <type>Checkbox</type>
</CustomField>