unpackaged/main/default/objects/cmbls__Repayment__c/fields/cmbls__Starting_Draw_Reserve_Balance__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Starting_Draw_Reserve_Balance__c</fullName>
    <inlineHelpText>The starting Draw Reserve Balance upon creation of loan. There is automation to create a Draw Reserve 'Payment' record to increase the Draw Reserve Balance to this amount upon Repayment Status being set to 'Active'.</inlineHelpText>
    <label>Starting Draw Reserve Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>