unpackaged/main/default/objects/cmbls__Repayment__c/fields/cmbls__Status__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Status__c</fullName>
    <description>Active, pause, complete, and new</description>
    <inlineHelpText>Active, pause, complete, and new</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Temporary Pause</fullName>
            </value>
            <value>
                <fullName>Pause</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Write Off</fullName>
            </value>
            <value>
                <fullName>Recovery</fullName>
            </value>
            <value>
                <fullName>Unwind</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>