unpackaged/main/default/objects/cmbls__Repayment__c/fields/cmbls__Total_Credits_to_Draw_Reserve__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Total_Credits_to_Draw_Reserve__c</fullName>
    <label>Total Credits to Draw Reserve</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>