unpackaged/main/default/objects/cmbls__Repayment__c/fields/cmbls__Total_Debit_Draws__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Total_Debit_Draws__c</fullName>
    <label>Total Debit Draws</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>