unpackaged/main/default/objects/cmbls__Repayment__c/fields/cmbls__Total_Outstanding_Amount__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Total_Outstanding_Amount__c</fullName>
    <description>Balance</description>
    <formula>cmbls__Open_Balance__c +  cmbls__Fee_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Balance</inlineHelpText>
    <label>Total Outstanding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>