unpackaged/main/default/objects/cmbls__Repayment__c/fields/cmbls_Repayment_Schedules__c.field-meta.xml
<CustomField>
    <fullName>cmbls_Repayment_Schedules__c</fullName>
    <label># of Repayment Schedules</label>
    <summaryForeignKey>cmbls__Repayment_Schedule__c.cmbls__Repayment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>