unpackaged/main/default/objects/cmbls__Repayment__c/fields/Deferred_Income_Org_Fees_GL__c.field-meta.xml
<CustomField>
    <fullName>Deferred_Income_Org_Fees_GL__c</fullName>
    <label>Deferred Income - Org Fees GL #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>