unpackaged/main/default/objects/cmbls__Repayment__c/fields/Disbursement_Status__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Status__c</fullName>
    <label>Disbursement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disbursed</fullName>
            </value>
            <value>
                <fullName>Not Disbursed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>