unpackaged/main/default/objects/cmbls__Repayment__c/fields/Enable_Maturity_Default_Fees__c.field-meta.xml
<CustomField>
    <fullName>Enable_Maturity_Default_Fees__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Maturity Default Fees</label>
    <type>Checkbox</type>
</CustomField>