unpackaged/main/default/objects/cmbls__Repayment__c/fields/Expected_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expected_Payment_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>SUM of Amortization Schdules Payment Amount up to today's date. Used in the balance refresh process. Populated nightly by an apex job.</description>
    <inlineHelpText>SUM of Amortization Schdules Payment Amount up to today's date. Used in the balance refresh process. Populated nightly by an apex job.</inlineHelpText>
    <label>Expected Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>