unpackaged/main/default/objects/cmbls__Repayment__c/fields/Expected_Payment_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Expected_Payment_Last_Updated__c</fullName>
    <label>Expected Payment Last Updated</label>
    <type>DateTime</type>
</CustomField>