unpackaged/main/default/objects/cmbls__Repayment__c/fields/FUNAS_Execution_Result__c.field-meta.xml
<CustomField>
    <fullName>FUNAS_Execution_Result__c</fullName>
    <label>FUNAS Execution Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>