unpackaged/main/default/objects/cmbls__Repayment__c/fields/Funding_Disbursement_Canceled__c.field-meta.xml
<CustomField>
    <fullName>Funding_Disbursement_Canceled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Funding Disbursement Canceled</label>
    <type>Checkbox</type>
</CustomField>