unpackaged/main/default/objects/cmbls__Repayment__c/fields/Generate_FUNAS_Amortization_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Generate_FUNAS_Amortization_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, a batch job will pull the record and it will run Funas Amortization.</description>
    <inlineHelpText>If checked, a batch job will pull the record and it will run Funas Amortization.</inlineHelpText>
    <label>Generate FUNAS Amortization Schedule</label>
    <type>Checkbox</type>
</CustomField>