unpackaged/main/default/objects/cmbls__Repayment__c/fields/GL_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>GL_Termination_Date__c</fullName>
    <formula>IF(
    ISPICKVAL(cmbls__Status__c, 'Write Off'),
			 cmbls__Write_Off_Date__c,
				cmbls__Date_completed__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GL Termination Date</label>
    <type>Date</type>
</CustomField>