unpackaged/main/default/objects/cmbls__Repayment__c/fields/Last_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Amount__c</fullName>
    <label>Last Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>