unpackaged/main/default/objects/cmbls__Repayment__c/fields/Lender_Account__c.field-meta.xml
<CustomField>
    <fullName>Lender_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lender Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Repayments (Lender Account)</relationshipLabel>
    <relationshipName>Repayments</relationshipName>
    <type>Lookup</type>
</CustomField>