unpackaged/main/default/objects/cmbls__Repayment__c/fields/Lender_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Lender_Account_Name__c</fullName>
    <formula>Lender_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lender Account Name</label>
    <type>Text</type>
</CustomField>