unpackaged/main/default/objects/cmbls__Repayment__c/fields/Lender_formula__c.field-meta.xml
<CustomField>
    <fullName>Lender_formula__c</fullName>
    <description>Lender Name formula</description>
    <formula>IF(
CONTAINS( Lender_Account__r.Name , "Quick Bridge"),
"Quick Bridge Funding",
IF(
CONTAINS(Lender_Account__r.Name, "National Funding"),
"National Funding",
"National Funding"
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lender</label>
    <type>Text</type>
</CustomField>