unpackaged/main/default/objects/cmbls__Repayment__c/fields/Loans_Payable_GL__c.field-meta.xml
<CustomField>
    <fullName>Loans_Payable_GL__c</fullName>
    <label>Loans Payable GL #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>