unpackaged/main/default/objects/cmbls__Repayment__c/fields/Maturity_Default_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Default_Fee_Amount__c</fullName>
    <inlineHelpText>If null, the global ‘Maturity Default Fee Amount’ in National Funding Settings (Custom Settings) will be used</inlineHelpText>
    <label>Maturity Default Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>