unpackaged/main/default/objects/cmbls__Repayment__c/fields/Merchant_Number__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Number__c</fullName>
    <externalId>true</externalId>
    <label>LoanNumber</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>