unpackaged/main/default/objects/cmbls__Repayment__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Repayments (Opportunity)</relationshipLabel>
    <relationshipName>Repayments</relationshipName>
    <type>Lookup</type>
</CustomField>