unpackaged/main/default/objects/cmbls__Repayment__c/fields/Original_Date_Completed__c.field-meta.xml
<CustomField>
    <fullName>Original_Date_Completed__c</fullName>
    <label>Original Date Completed</label>
    <type>Date</type>
</CustomField>