unpackaged/main/default/objects/cmbls__Repayment__c/fields/Original_Repayment_Clawback_LoanNumber__c.field-meta.xml
<CustomField>
    <fullName>Original_Repayment_Clawback_LoanNumber__c</fullName>
    <formula>Original_Repayment_for_Clawback__r.Merchant_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Repayment Clawback LoanNumber</label>
    <type>Text</type>
</CustomField>