unpackaged/main/default/objects/cmbls__Repayment__c/fields/Original_Repayment_for_Clawback__c.field-meta.xml
<CustomField>
    <fullName>Original_Repayment_for_Clawback__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Repayment for Clawback</label>
    <referenceTo>cmbls__Repayment__c</referenceTo>
    <relationshipLabel>Clawback Repayments</relationshipLabel>
    <relationshipName>Clawback_Repayments</relationshipName>
    <type>Lookup</type>
</CustomField>