unpackaged/main/default/objects/cmbls__Repayment__c/fields/Pause_Date__c.field-meta.xml
<CustomField>
    <fullName>Pause_Date__c</fullName>
    <label>Pause Date</label>
    <type>Date</type>
</CustomField>