unpackaged/main/default/objects/cmbls__Repayment__c/fields/Permanent_Mod__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Mod__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permanent Mod</label>
    <type>Checkbox</type>
</CustomField>