unpackaged/main/default/objects/cmbls__Repayment__c/fields/Post_Write_Off_Payments_Credited__c.field-meta.xml
<CustomField>
    <fullName>Post_Write_Off_Payments_Credited__c</fullName>
    <description>Any Credit Payment records settled/applied where 'Post Write Off Record' is True.</description>
    <inlineHelpText>Any Credit Payment records settled/applied where 'Post Write Off Record' is True.</inlineHelpText>
    <label>Post Write Off Payments Credited</label>
    <summarizedField>cmbls__Payment__c.cmbls__Transaction_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>cmbls__Payment__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Credit</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>cmbls__Payment__c.cmbls__Status__c</field>
        <operation>equals</operation>
        <value>Settled, Fees Reversed, Applied</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>cmbls__Payment__c.cmbls__Post_Write_Off_Record__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>cmbls__Payment__c.cmbls__Repayment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>