unpackaged/main/default/objects/cmbls__Repayment__c/fields/Remaining_Receivable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Receivable_Amount__c</fullName>
    <label>Remaining Receivable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>