unpackaged/main/default/objects/cmbls__Repayment__c/fields/Remaining_Settlement_Balance__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Settlement_Balance__c</fullName>
    <formula>Total_Settlement__c - (cmbls__Collections_on_Write_Off__c - Post_Write_Off_Payments_Credited__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Settlement Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>