unpackaged/main/default/objects/cmbls__Repayment__c/fields/Renewal_Lender_Renewal_Payoff_GL__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Lender_Renewal_Payoff_GL__c</fullName>
    <formula>Lender_Account__r.Renewal_Payoff_Debit_GL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Lender Renewal Payoff GL #</label>
    <type>Text</type>
</CustomField>