unpackaged/main/default/objects/cmbls__Repayment__c/fields/Resume_Date__c.field-meta.xml
<CustomField>
    <fullName>Resume_Date__c</fullName>
    <label>Resume Date</label>
    <type>Date</type>
</CustomField>